// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pop back then forward:  - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "location": Object {
      "key": "345678",
      "pathname": "/",
      "search": "",
      "url": "/",
    },
    "params": Object {},
    "query": Object {},
    "state": Object {},
    "type": "FIRST",
  },
  Object {
    "basename": "",
    "hash": "",
    "location": Object {
      "key": "345678",
      "pathname": "/second",
      "search": "",
      "url": "/second",
    },
    "params": Object {},
    "query": Object {},
    "state": Object {},
    "type": "SECOND",
  },
  Object {
    "basename": "",
    "hash": "",
    "location": Object {
      "key": "345678",
      "pathname": "/third",
      "search": "",
      "url": "/third",
    },
    "params": Object {},
    "query": Object {},
    "state": Object {},
    "type": "THIRD",
  },
]
`;

exports[`pop back then forward:  - history_index 1`] = `1`;

exports[`pop back then forward:  - response 1`] = `
Object {
  "basename": "",
  "hash": "",
  "location": Object {
    "direction": "backward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/",
          "search": "",
          "url": "/",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/second",
          "search": "",
          "url": "/second",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "SECOND",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/third",
          "search": "",
          "url": "/third",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "THIRD",
      },
    ],
    "from": null,
    "index": 1,
    "key": "345678",
    "kind": "back",
    "length": 3,
    "pathname": "/second",
    "pop": true,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "location": Object {
            "key": "345678",
            "pathname": "/",
            "search": "",
            "url": "/",
          },
          "params": Object {},
          "query": Object {},
          "state": Object {},
          "type": "FIRST",
        },
        Object {
          "basename": "",
          "hash": "",
          "location": Object {
            "key": "345678",
            "pathname": "/second",
            "search": "",
            "url": "/second",
          },
          "params": Object {},
          "query": Object {},
          "state": Object {},
          "type": "SECOND",
        },
        Object {
          "basename": "",
          "hash": "",
          "location": Object {
            "key": "345678",
            "pathname": "/third",
            "search": "",
            "url": "/third",
          },
          "params": Object {},
          "query": Object {},
          "state": Object {},
          "type": "THIRD",
        },
      ],
      "hash": "",
      "index": 2,
      "key": "345678",
      "kind": "push",
      "length": 3,
      "params": Object {},
      "pathname": "/third",
      "pop": false,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "THIRD",
      "url": "/third",
    },
    "scene": "",
    "search": "",
    "status": 200,
    "url": "/second",
  },
  "params": Object {},
  "query": Object {},
  "state": Object {},
  "type": "SECOND",
}
`;

exports[`pop back then forward:  - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`pop back then forward:  - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`pop back then forward:  - routes - SECOND - beforeEnter 1`] = `2`;

exports[`pop back then forward:  - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "backward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/",
          "search": "",
          "url": "/",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/second",
          "search": "",
          "url": "/second",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "SECOND",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/third",
          "search": "",
          "url": "/third",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "THIRD",
      },
    ],
    "from": null,
    "hash": "",
    "index": 1,
    "key": "345678",
    "kind": "back",
    "length": 3,
    "params": Object {},
    "pathname": "/second",
    "pop": true,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "location": Object {
            "key": "345678",
            "pathname": "/",
            "search": "",
            "url": "/",
          },
          "params": Object {},
          "query": Object {},
          "state": Object {},
          "type": "FIRST",
        },
        Object {
          "basename": "",
          "hash": "",
          "location": Object {
            "key": "345678",
            "pathname": "/second",
            "search": "",
            "url": "/second",
          },
          "params": Object {},
          "query": Object {},
          "state": Object {},
          "type": "SECOND",
        },
        Object {
          "basename": "",
          "hash": "",
          "location": Object {
            "key": "345678",
            "pathname": "/third",
            "search": "",
            "url": "/third",
          },
          "params": Object {},
          "query": Object {},
          "state": Object {},
          "type": "THIRD",
        },
      ],
      "hash": "",
      "index": 2,
      "key": "345678",
      "kind": "push",
      "length": 3,
      "params": Object {},
      "pathname": "/third",
      "pop": false,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "THIRD",
      "url": "/third",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "SECOND",
    "universal": false,
    "url": "/second",
  },
  "title": "SECOND",
}
`;

exports[`pop back then forward:  - title 1`] = `"SECOND"`;
